# GitBlameAnalyzer

./: .gitignore  Cargo.toml  README.md
resources/: config.yml
src/: cache.rs  config.rs  git.rs  main.rs
src/config/: project.rs
