[package]
name = "git-blame-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
directories = "5.0"
indicatif = "0.17"
itertools = "0.12"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_regex = "1.1"
serde_yaml = "0.9"
